objects/Address__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Addresses</relationshipLabel>
        <relationshipName>Account_Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address_Line_1__c</fullName>
        <label>Address Line 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Address_Line_2__c</fullName>
        <label>Address Line   2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Address_Ordinal__c</fullName>
        <label>Address Ordinal</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Status__c</fullName>
        <label>Address Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Type__c</fullName>
        <label>Address Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <formula>if(LEN(Address_Line_1__c)&gt;0, Address_Line_1__c&amp; &quot; &quot; , &quot;&quot; ) &amp; BR() &amp;
if(LEN(Address_Line_2__c)&gt;0, Address_Line_2__c&amp; &quot; &quot; , &quot;&quot; ) &amp; BR() &amp;
if(LEN(City__c)&gt;0, City__c&amp; &quot;, &quot; , &quot;&quot; )&amp;
if(LEN(State__c)&gt;0, State__c &amp; &quot; &quot; , &quot;&quot; )&amp;
if(LEN(Postal_Code__c)&gt;0, Postal_Code__c,&quot;&quot;) &amp; BR() &amp;
If(LEN(Country__c) &gt;0, Country__c,&quot;&quot;)</formula>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Addresses</relationshipLabel>
        <relationshipName>Contact_Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Entity_Type__c</fullName>
        <label>Entity Type</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_VID__c</fullName>
        <label>Entity VID</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Externally_Mastered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Externally Mastered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Proprietary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Proprietary?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Veeva_Master__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Veeva Master</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VID__c</fullName>
        <externalId>true</externalId>
        <label>VID</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <label>Address</label>
    <nameField>
        <displayFormat>GHAD-{0000}</displayFormat>
        <label>Address Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Addresses</pluralLabel>
    <recordTypes>
        <fullName>Account_Address</fullName>
        <active>true</active>
        <label>Account Address</label>
    </recordTypes>
    <recordTypes>
        <fullName>Contact_Address</fullName>
        <active>true</active>
        <label>Contact Address</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Contact_or_Account_is_Required</fullName>
        <active>true</active>
        <errorConditionFormula>IF(AND(ISBLANK(Account__c),ISBLANK(Contact__c)), true, false)</errorConditionFormula>
        <errorMessage>Please select contact or account while creating address</errorMessage>
    </validationRules>
</CustomObject>